Update to avoid scrollbars

--- a/assets/storymap/css/style-desktop.css
+++ b/assets/storymap/css/style-desktop.css
@@ -8,12 +8,12 @@
   }
 
   #map {
-    width: 100vw;
-    left: 0px;
+    width: calc(100vw - 500px);
+    left: 500px;
     height: 100vh;
     border: 0;
     z-index: 0;
-  }
+    }
 
   #title {
     width: 60vw;
