--- a/assets/storymap/css/style.css
+++ b/assets/storymap/css/style.css
@@ -1,6 +1,3 @@
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@import "minimal-mistakes"; // main partials
-
 body {
   padding: 0px;
   margin: 0px;
@@ -23,8 +20,10 @@ body {
   width: 100vw;
   height: calc(100vh - 203px);
   z-index: 80;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 20px;
   background-color:#eeeeee;
-  padding: 20px;
 }
 
 #contents {
